kubernetes-cicd-labs/terraform/k8s-manifets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfoliotracker
  labels:
    name: portfoliotracker
    security-level: "restricted"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
