kubernetes-cicd-labs/terraform/k8s-manifets/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfoliotracker-network-policy
  namespace: portfoliotracker
spec:
  podSelector:
    matchLabels:
      app: portfoliotracker
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          name: portfoliotracker
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to: []
    ports:
    - protocol: TCP
      port: 443  # HTTPS
    - protocol: TCP
      port: 53   # DNS
    - protocol: UDP
      port: 53   # DNS
  - to:
    - namespaceSelector:
        matchLabels:
          name: portfoliotracker
    ports:
    - protocol: TCP
      port: 5432  # PostgreSQL
