kubernetes-cicd-labs/terraform/k8s-manifets/pod-security-policy.yaml
# Note: Pod Security Policies are deprecated in Kubernetes 1.25+
# This file shows the legacy approach and modern Pod Security Standards approach

# Legacy Pod Security Policy (for reference - deprecated)
---
# Example of Open Policy Agent (OPA) Gatekeeper ConstraintTemplate
# This provides a more modern approach to policy enforcement
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: portfoliotrackersecurity
spec:
  crd:
    spec:
      names:
        kind: PortfolioTrackerSecurity
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedUsers:
              type: array
              items:
                type: integer
            allowedGroups:
              type: array
              items:
                type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package portfoliotrackersecurity

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := "Privileged containers are not allowed"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := "Containers cannot run as root user (UID 0)"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := "Container must specify memory limits"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := "Container must specify CPU limits"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.allowPrivilegeEscalation == true
          msg := "Privilege escalation is not allowed"
        }
